# airbnb_data_pipeline

./: .gitignore  etl.py  pyproject.toml
connections/: db_conn.py
sql/: create_raw_hosts_table.sql  create_raw_listings_table.sql  create_raw_reviews_table.sql
transform/: dbt_project.yml
transform/macros/: select_positive_values.sql
transform/models/: schema.yml
transform/models/dim/: dim_hosts_cleansed.sql  dim_listings_cleansed.sql  dim_listings_w_hosts.sql
transform/models/fct/: fct_reviews.sql
transform/models/mart/: mart_full_moon.sql
transform/models/src/: src_hosts.sql  src_listings.sql  src_reviews.sql
transform/snapshots/: raw_hosts_snapshot.yml  raw_listings_snapshot.yml
transform/tests/: dim_listings_minimum_nights.sql  fct_reviews_consistence_date_review.sql
transform/tests/generic/: minimum_row_count.sql  positive_values.sql
transform/tests/unit_tests/: unit_tests.yml
