[tool.poetry]
name = "airbnb-etl"
version = "0.1.0"
description = ""
authors = ["rabernardino <rabernardino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.*"
pandas = "^3.0.3"
sqlalchemy = "^2.0.51"
psycopg = {extras = ["binary"], version = "^3.3.4"}
dbt-postgres = "^1.10.2"
python-dotenv = "^1.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
